ADEN-11073 change UAP z-index to fix navigation viewability (#1044)
* ADEN-11073 change UAP z-index to fix navigation viewability

* ADEN-11073, revert bfab global changes, added new mixin

* ADEN-11073 fixes after merge

--- a/platforms/shared/styles/uap/_bfaa-sticky-small.scss
+++ b/platforms/shared/styles/uap/_bfaa-sticky-small.scss
@@ -1,5 +1,4 @@
 @mixin bfaa-sticky-small() {
-	z-index: 202;
 	&.bfaa-sticky-small {
 		#top_leaderboard {
 			.video-overlay {
