--- a/platforms/ucp-mobile/styles.scss
+++ b/platforms/ucp-mobile/styles.scss
@@ -1,6 +1,7 @@
 @import 'src/ad-products/styles/mixin';
 @import 'platforms/shared/styles/index';
 @import 'src/ad-products/styles/porvata';
+@import 'src/ad-products/styles/uap-variables';
 
 @mixin ucp-mobile-uap-styles() {
 	.has-uap {
@@ -38,6 +39,7 @@
 		.top-leaderboard.ad-slot-placeholder {
 			position: sticky;
 			top: 55px;
+			z-index: $new-uap-bfaa-z-index;
 
 			#top_leaderboard {
 				@include uap-porvata();
@@ -58,7 +60,7 @@
 		}
 
 		#bottom_leaderboard {
-			@include bfab-slot();
+			@include bfab-new-uap();
 			@include uap-porvata();
 			@include uap-porvata-learn-more();
 			@include uap-advertisement-label();
